fixed padding issues and aligned grid w/ header

--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,3 @@
 .search-bar input {
 	width: 75%;
 }
-.person {
-	height: 50px;
-	border: 1px solid darkgrey;
-}
